--- a/views/create.ejs
+++ b/views/create.ejs
@@ -20,7 +20,7 @@
         <label>Content</label>
         <textarea name="content" rows="15"></textarea>
       </div>
-      <input type="submit" class="ui button" value="发布">
+      <input type="submit" class="ui button" value="post">
     </form>
   </div>
 </div>
